--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -22,5 +22,5 @@
 es:
   hello: "Hello world"
   will_paginate:
-    previous_label: <i class="material-icons">chevron_left</i>
-    next_label: <i class="material-icons">chevron_right</i>
+    previous_label: <i class="fa fa-angle-left"></i>
+    next_label: <i class="fa fa-angle-right"></i>
