--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -42,7 +42,7 @@ es:
       updated: "Has actualizado tu cuenta correctamente."
     sessions:
       signed_in: "Has iniciado sesión."
-      signed_out: "Has cerrado la sesión."
+      signed_out: "Has cerrado sesión."
     unlocks:
       send_instructions: "Recibirás un correo electrónico en unos minutos con instrucciones sobre cómo desbloquear tu cuenta."
       send_paranoid_instructions: "Si tu cuenta existe, recibirás un correo electrónico en unos minutos con instrucciones sobre cómo desbloquear tu cuenta."
