--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -24,3 +24,4 @@ es:
   will_paginate:
     previous_label: <i class="fa fa-angle-left"></i>
     next_label: <i class="fa fa-angle-right"></i>
+    page_gap: "&hellip;"
