--- a/README.rdoc
+++ b/README.rdoc
@@ -42,9 +42,9 @@ Please feel free to use a different markup language if you do not plan to run
 
 *authentificacion con facebook y twiter
 
-*paginacio con kaminari 
+*paginacion con kaminari 
 
-*Scroll ininto usando ajax & respues en js.builder
+*Scroll infinito usando ajax & respuestas en js.builder
 
 *generacion de URL amigables con gem 'friendly_id'
 
